Update to solar-parent 1.0, JDK 17, and new deployment requirements