@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>gg.solarmc</groupId>
 		<artifactId>solar-parent</artifactId>
-		<version>0.6.2</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>gg.solarmc.placeholder</groupId>
@@ -21,7 +21,6 @@
 		<slf4j.version>1.7.30</slf4j.version>
 		<junit.version>5.7.2</junit.version>
 		<mockito.version>3.12.4</mockito.version>
-		<solar-parent.enablePreview>--enable-preview</solar-parent.enablePreview>
 	</properties>
 
 	<scm>
@@ -142,24 +141,15 @@
 			<dependency>
 				<groupId>space.arim.api</groupId>
 				<artifactId>arimapi-util-testing</artifactId>
-				<version>0.24.8-SNAPSHOT</version>
+				<version>0.24.8</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 	<repositories>
 		<repository>
-			<id>solar-releases</id>
-			<url>https://mvn-repo.solarmc.gg/releases</url>
-		</repository>
-		<repository>
-			<id>arim-mvn-lgpl3</id>
-			<url>https://mvn-repo.arim.space/lesser-gpl3/</url>
-		</repository>
-		<repository>
-			<id>arim-mvn-gpl3</id>
-			<url>https://mvn-repo.arim.space/gpl3</url>
+			<id>solar-repo</id>
+			<url>https://repo.solarmc.gg/mvn</url>
 		</repository>
 	</repositories>
 </project>
